[workspace]
members = [
    "examples/chat/client",
    "examples/chat/common",
    "examples/chat/server",
    "examples/echo/client",
    "examples/echo/server",
    "examples/notes/client",
    "examples/notes/common",
    "examples/notes/server",
    "examples/todo/client",
    "examples/todo/common",
    "examples/todo/server",

    "laplace_client",
    "laplace_common",
    "laplace_server",
    "laplace_wasm",
    "laplace_wasm_macro",
    "laplace_yew",
]

[profile.release]
lto = true

# Remove this patch when PR https://github.com/yewstack/implicit-clone/pull/7 will be merged
[patch.crates-io]
implicit-clone = { git = "https://github.com/XX/implicit-clone", branch = "add_str_borrowing" }