[workspace]
resolver = "2"
members = [
    "examples/chat/client",
    "examples/chat/common",
    "examples/chat/server",
    "examples/echo/client",
    "examples/echo/server",
    "examples/notes/client",
    "examples/notes/common",
    "examples/notes/server",
    "examples/todo/client",
    "examples/todo/common",
    "examples/todo/server",

    "laplace_client",
    "laplace_common",
    "laplace_server",
    "laplace_wasm",
    "laplace_wasm_macro",
    "laplace_yew",
    "tests",
]
exclude = [
    "laplace_mobile",
]

[profile.release]
lto = true

[workspace.dependencies]
borsh = { version = "1.5", features = ["derive"] }
derive_more = { version = "1.0", features = ["from", "display", "deref", "deref_mut"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
yew = { version = "0.21", features = ["csr"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
thiserror = "2.0"