[package]
name = "dapla_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/dapla"
description = "The decentralized application platform WASM client"

[dependencies]
anyhow = "1.0"
yew = { version = "0.18", features = ["web_sys"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dapla_common = { path = "../dapla_common" }
dapla_yew = { path = "../dapla_yew" }