[package]
name = "dapla_common"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/noogen-projects/dapla"
description = "The decentralized application platform common lib"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.20", features = ["derive"] }
