[package]
name = "dapla_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/noogen-projects/dapla"
description = "The decentralized application platform server"

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-files = "0.6.0-beta.4"
arc-swap = "1.2"
clap = "3.0.0-beta.2"
borsh = "0.9"
libp2p = { version = "0.37", features = ["tcp-tokio", "mdns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.8"
config = "0.11"
toml = "0.5"
wasmer = "1.0"
wasmer-wasi = "1.0"
rusqlite = { version = "0.25", features = ["bundled"] }
dapla_common = { path = "../dapla_common" }
dapla_wasm = { path = "../dapla_wasm" }