[package]
name = "dapla_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/noogen-projects/dapla"
description = "The decentralized application platform server"

[dependencies]
async-std = "1.9"
actix = "0.11"
actix-web = "=4.0.0-beta.5"
actix-web-actors = "4.0.0-beta.4"
actix-service = "=2.0.0-beta.5"
actix-files = "0.6.0-beta.4"
arc-swap = "1.3"
clap = "3.0.0-beta.2"
borsh = "0.9"
futures = "0.3"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99"
log = "0.4"
env_logger = "0.9"
config = "0.11"
toml = "0.5"
wasmer = "1.0"
wasmer-wasi = "1.0"
rusqlite = { version = "0.25", features = ["bundled"] }
dapla_common = { path = "../dapla_common" }
dapla_wasm = { path = "../dapla_wasm" }