[package]
name = "dapla_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/dapla"
description = "The server of decentralized application platform"

[dependencies]
async-std = "1.9"
actix = "0.12"
actix-web = "=4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.7"
actix-files = "0.6.0-beta.7"
arc-swap = "1.3"
bs58 = "0.4"
clap = "3.0.0-beta.2"
borsh = "0.9"
futures = "0.3"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99"
log = "0.4"
env_logger = "0.9"
config = "0.11"
toml = "0.5"
wasmer = "2.0"
wasmer-wasi = "2.0"
rusqlite = { version = "0.25", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking"] }
dapla_common = { path = "../dapla_common" }
dapla_wasm = { path = "../dapla_wasm" }