[package]
name = "dapla_wasm_macro"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The WASM macros of the decentralized application platform"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
