[package]
name = "dapla_yew"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The decentralized application platform WASM client yew helpers"

[dependencies]
anyhow = "1.0"
yew = { version = "0.17", features = ["web_sys"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
