[package]
name = "laplace_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/laplace"
description = "The WASM client of the local-firs web-application platform"

[dependencies]
anyhow = "1.0"
yew = { git = "https://github.com/XX/yew.git", branch = "extend_listener" }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
wasm-web-helpers = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
laplace_common = { path = "../laplace_common" }
laplace_yew = { path = "../laplace_yew" }