[package]
name = "laplace_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/laplace"
description = "The WASM client of the local-firs web-application platform"

[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
laplace_common = { path = "../laplace_common" }
laplace_yew = { path = "../laplace_yew" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
wasm-web-helpers = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "FormData"] }
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
