[package]
name = "laplace_common"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/laplace"
description = "The common lib of the local-firs web-application platform"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
