[package]
name = "laplace_mobile"
version = "0.1.1"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/laplace_mobile"
description = "The mobile server of the local-firs web-application platform"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
actix-web = "4.2"
jni = "0.19"
laplace_server = { path = "../laplace_server" }
log = "0.4"
ndk = "0.7"
ndk-context = "0.1"
ndk-glue = "0.7"
toml = "0.5"

[profile.release]
lto = true

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 23
build_targets = ["aarch64-linux-android", "i686-linux-android"]

[package.metadata.android]
apk_name = "laplace"
assets = "../target/mobile/assets"

    [[package.metadata.android.uses_permission]]
    name = "android.permission.WRITE_EXTERNAL_STORAGE"

    [[package.metadata.android.uses_permission]]
    name = "android.permission.INTERNET"

    [[package.metadata.android.uses_permission]]
    name = "android.permission.CHANGE_NETWORK_STATE"

    [[package.metadata.android.uses_permission]]
    name = "android.permission.ACCESS_NETWORK_STATE"
