[package]
name = "laplace_server"
version = "0.1.5"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/laplace"
description = "The server of the local-first web-application platform"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["ws", "multipart"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
axum_typed_multipart = "0.10"
borsh = { workspace = true }
bs58 = "0.5"
cap-std = "2.0"
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
const_format = "0.2"
cookie = "0.18"
derive_more = "0.99"
flexi_logger = "0.27"
futures = "0.3"
hyper = "0.14"
laplace_common = { path = "../laplace_common" }
laplace_wasm = { path = "../laplace_wasm" }
lazy_static = "1.4"
libp2p = { version = "0.52", features = [
    "dns",
    "gossipsub",
    "macros",
    "mdns",
    "noise",
    "tcp",
    "tokio",
    "websocket",
    "yamux",
] }
log = "0.4"
rcgen = "0.11"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.17"
rusqlite = { version = "0.29", features = ["bundled"] }
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
thiserror = "1.0"
tokio = { workspace = true }
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "set-header", "normalize-path", "compression-gzip"] }
truba = "0.1"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git", features = ["tokio"] }
zip = "0.6"
