[package]
name = "laplace_server"
version = "0.1.6"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/laplace"
description = "The server of the local-first web-application platform"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
axum_typed_multipart = "0.11"
borsh = { workspace = true }
bs58 = "0.5"
cap-std = "3.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
const_format = "0.2"
cookie = "0.18"
derive_more = "0.99"
flexi_logger = "0.28"
futures = "0.3"
http-body-util = "0.1"
humantime-serde = "1.1"
hyper = "1.3"
laplace_common = { path = "../laplace_common" }
laplace_wasm = { path = "../laplace_wasm" }
lazy_static = "1.5"
libp2p = { version = "0.53", features = [
    "dns",
    "gossipsub",
    "macros",
    "mdns",
    "noise",
    "tcp",
    "tokio",
    "websocket",
    "yamux",
] }
log = "0.4"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
ring = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
rustls = "0.21" # depend on axum-server
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tokio = { workspace = true }
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "set-header", "normalize-path", "compression-gzip"] }
truba = "0.1"
wasi-common = "22.0"
wasmtime = "22.0"
wasmtime-wasi = "22.0"
zip = "2.1"
