[package]
name = "laplace_wasm_macro"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The WASM macros of the local-firs web-application platform"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
