[package]
name = "chat_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The Chat d-app example"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
libp2p-core = "0.28"
bs58 = "0.4"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
yew = { version = "0.17", features = ["web_sys"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "CssStyleDeclaration"] }
pulldown-cmark = "0.8"
dapla_yew = { path = "../../../dapla_yew" }
chat_common = { path = "../common" }