[package]
name = "chat_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Chat lapp example"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
libp2p-core = "0.30"
bs58 = "0.4"
getrandom = { version = "0.2", features = ["js"] }
yew = { version = "0.18", features = ["web_sys"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "CssStyleDeclaration", "Range",
    "Selection", "HtmlCollection"
] }
pulldown-cmark = "0.8"
laplace_yew = { path = "../../../laplace_yew" }
chat_common = { path = "../common" }