[package]
name = "chat_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Chat lapp example"

[dependencies]
anyhow = "1.0"
bs58 = "0.4"
chat_common = { path = "../common" }
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = "0.2"
laplace_yew = { path = "../../../laplace_yew" }
libp2p-core = "0.36"
pulldown-cmark = "0.9"
serde_json = "1.0"
wasm-web-helpers = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "CssStyleDeclaration",
    "Range",
    "Selection",
    "HtmlCollection",
] }
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
