[package]
name = "chat_common"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Chat lapp example"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
