[package]
name = "chat_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Chat lapp example"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
borsh = "0.9"
chat_common = { path = "../common" }
laplace_wasm = { path = "../../../laplace_wasm" }