[package]
name = "echo_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The Echo d-app example"

[dependencies]
anyhow = "1.0"
yew = { version = "0.18", features = ["web_sys"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement"] }