[package]
name = "echo_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Echo lapp example"

[dependencies]
yew = { git = "https://github.com/XX/yew.git", branch = "extend_listener" }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
reqwasm = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement"] }