[package]
name = "echo_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Echo lapp example"

[dependencies]
wasm-web-helpers = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement"] }
yew = { workspace = true }
yew-mdc-widgets = { workspace = true }
