[package]
name = "echo_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Echo lapp example"

[lib]
crate-type = ["cdylib"]

[dependencies]
laplace_wasm = { path = "../../../laplace_wasm" }
