[package]
name = "hello_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The \"Hello world\" d-app example"

[dependencies]
anyhow = "1.0.38"
yew = { version = "0.17.4", features = ["web_sys"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
js-sys = "0.3.45"