[package]
name = "notes_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Notes lapp example"

[dependencies]
anyhow = "1.0"
yew = { version = "0.18", features = ["web_sys"] }
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets" }
lew = { git = "https://github.com/noogen-projects/lew" }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement", "HtmlElement", "HtmlTextAreaElement", "DomStringMap"] }
pulldown-cmark = "0.8"
notes_common = { path = "../common" }
laplace_yew = { path = "../../../laplace_yew" }