[package]
name = "notes_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The Notes d-app example"

[dependencies]
serde_json = "1.0"
dapla_wasm = { path = "../../../dapla_wasm" }