[package]
name = "notes_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Notes lapp example"

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
notes_common = { path = "../common" }
laplace_wasm = { path = "../../../laplace_wasm" }