[package]
name = "todo_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The Todo d-app example"

[dependencies]
anyhow = "1.0.38"
strum = { version = "0.20", features = ["derive"] }
yew = { version = "0.17.4", features = ["web_sys"] }
web-sys = { version = "0.3.46", features = ["HtmlInputElement"] }
todo_common = { path = "../common" }
dapla_yew = { path = "../../../dapla_yew" }