[package]
name = "todo_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The Todo d-app example"

[dependencies]
anyhow = "1.0"
strum = { version = "0.21", features = ["derive"] }
yew = { version = "0.18", features = ["web_sys"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
todo_common = { path = "../common" }
dapla_yew = { path = "../../../dapla_yew" }