[package]
name = "todo_client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Todo lapp example"

[dependencies]
anyhow = "1.0"
gloo-console = "0.2"
laplace_yew = { path = "../../../laplace_yew" }
strum = { version = "0.24", features = ["derive"] }
todo_common = { path = "../common" }
wasm-dom = "1.0"
wasm-web-helpers = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
yew = { workspace = true }
