[package]
name = "todo_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/dapla"
description = "The Todo d-app example"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.23"
serde_json = "1.0"
borsh = "0.9.0"
sql-builder = "3.1.1"
todo_common = { path = "../common" }
dapla_wasm = { path = "../../../dapla_wasm" }