[package]
name = "todo_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/laplace"
description = "The Todo lapp example"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
borsh = { workspace = true }
laplace_wasm = { path = "../../../laplace_wasm" }
serde_json = "1.0"
sql-builder = "3.1"
thiserror = "1.0"
todo_common = { path = "../common" }
